generator client {
  provider = "prisma-client-js"
  output   = "../node_modules/.prisma/client"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Health check table
model SystemHealth {
  id        String   @id @default(cuid())
  status    String
  timestamp DateTime @default(now())
  metadata  Json?

  @@map("system_health")
}

// Users table - extends current auth with user management
model User {
  id             String    @id @default(cuid())
  walletAddress  String    @unique @map("wallet_address") // Ethereum address format
  username       String?   @unique
  email          String?   @unique
  isActive       Boolean   @default(true) @map("is_active")
  profileData    Json      @default("{}") @map("profile_data")
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")
  lastLogin      DateTime? @map("last_login")
  
  // Relations
  userRoles      UserRole[]
  grantedRoles   UserRole[] @relation("GrantedBy")

  @@index([walletAddress])
  @@index([username])
  @@index([email])
  @@index([isActive])
  @@map("users")
}

// Roles table
model Role {
  id          String   @id @default(cuid())
  name        String   @unique
  description String?
  isSystem    Boolean  @default(false) @map("is_system")
  createdAt   DateTime @default(now()) @map("created_at")
  
  // Relations
  userRoles       UserRole[]
  rolePermissions RolePermission[]

  @@index([name])
  @@index([isSystem])
  @@map("roles")
}

// User roles junction table (many-to-many with audit)
model UserRole {
  id        String    @id @default(cuid())
  userId    String    @map("user_id")
  roleId    String    @map("role_id")
  grantedAt DateTime  @default(now()) @map("granted_at")
  grantedBy String?   @map("granted_by")
  expiresAt DateTime? @map("expires_at")
  
  // Relations
  user      User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  role      Role  @relation(fields: [roleId], references: [id], onDelete: Cascade)
  grantee   User? @relation("GrantedBy", fields: [grantedBy], references: [id])

  @@unique([userId, roleId])
  @@index([userId])
  @@index([roleId])
  @@index([expiresAt])
  @@map("user_roles")
}

// Permissions table
model Permission {
  id          String   @id @default(cuid())
  resource    String
  action      String
  description String?
  createdAt   DateTime @default(now()) @map("created_at")

  // Relations
  rolePermissions RolePermission[]

  @@unique([resource, action])
  @@index([resource])
  @@index([action])
  @@map("permissions")
}

// Role permissions junction table
model RolePermission {
  id           String    @id @default(cuid())
  roleId       String    @map("role_id")
  permissionId String    @map("permission_id")
  createdAt    DateTime  @default(now()) @map("created_at")

  // Relations
  role       Role       @relation(fields: [roleId], references: [id], onDelete: Cascade)
  permission Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@unique([roleId, permissionId])
  @@map("role_permissions")
}

// Etherscan cache table for API response caching
model EtherscanCache {
  id          String   @id @default(cuid())
  requestType String   @map("request_type") // e.g., "balance", "transactions", "tokens"
  parameters  String   // Hashed/stringified parameters for the request
  response    Json     // Cached API response data
  createdAt   DateTime @default(now()) @map("created_at")
  expiresAt   DateTime @map("expires_at") // TTL-based expiration
  
  @@unique([requestType, parameters])
  @@index([requestType])
  @@index([expiresAt])
  @@index([createdAt])
  @@map("etherscan_cache")
}

// Authorization objects for processing pipeline
model Authorization {
  id           String             @id @default(cuid())

  kind         Int                // OperationKind enum: 0=TRANSFER, 1=DEPOSIT, 2=PROCESS, 3=CLAIM
  fromAddress  String             @map("from_address")
  toAddress    String             @map("to_address")
  token        String             // Token contract address
  amount       String             // BigInt as string
  nonce        String             // bytes32 as hex string
  validAfter   String             @map("valid_after") // uint256 as string (timestamp)
  validBefore  String             @map("valid_before") // uint256 as string (timestamp)
  signature    String             // Full signature bytes as hex
  signer       String             // Recovered signer address

  status       AuthorizationStatus @default(VERIFIED)
  
  // Blockchain verification results
  allowanceAmount    String?  @map("allowance_amount") // reduce allowance as string
  
  // Settlement tracking
  settlementHash    String?   @map("settlement_hash") // Transaction hash when settled
  settledAt         DateTime? @map("settled_at")
  submittedAt        DateTime? @map("submitted_at")
  
  // Audit fields
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")
  
  @@unique([signer, nonce])
  @@index([signer])
  @@index([nonce])
  @@index([status])
  @@index([kind])
  @@index([fromAddress])
  @@index([toAddress])
  @@index([token])
  @@index([createdAt])
  @@index([updatedAt])
  @@index([submittedAt])
  @@index([settledAt])
  @@index([settlementHash])
  @@map("authorizations")
}

enum AuthorizationStatus {
  VERIFIED          // Valid signature
  AUTHORIZE           // Is waiting for authorization
  TIMELOCK          // Timelock until validAfter
  READY             // Ready to settle
  EXPIRED           // Expired before validBefore
  SETTLED           // Successfully settled on-chain
  FAILED            // Settlement failed
  CANCELLED         // Cancelled
}

