//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table system_health {
  id String [pk]
  status String [not null]
  timestamp DateTime [default: `now()`, not null]
  metadata Json
}

Table users {
  id String [pk]
  walletAddress String [unique, not null]
  username String [unique]
  email String [unique]
  isActive Boolean [not null, default: true]
  profileData Json [not null, default: '{}']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  lastLogin DateTime
  userRoles user_roles [not null]
  grantedRoles user_roles [not null]
}

Table roles {
  id String [pk]
  name String [unique, not null]
  description String
  isSystem Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  userRoles user_roles [not null]
  rolePermissions role_permissions [not null]
}

Table user_roles {
  id String [pk]
  userId String [not null]
  roleId String [not null]
  grantedAt DateTime [default: `now()`, not null]
  grantedBy String
  expiresAt DateTime
  user users [not null]
  role roles [not null]
  grantee users

  indexes {
    (userId, roleId) [unique]
  }
}

Table permissions {
  id String [pk]
  resource String [not null]
  action String [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  rolePermissions role_permissions [not null]

  indexes {
    (resource, action) [unique]
  }
}

Table role_permissions {
  id String [pk]
  roleId String [not null]
  permissionId String [not null]
  createdAt DateTime [default: `now()`, not null]
  role roles [not null]
  permission permissions [not null]

  indexes {
    (roleId, permissionId) [unique]
  }
}

Table etherscan_cache {
  id String [pk]
  requestType String [not null]
  parameters String [not null]
  response Json [not null]
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime [not null]

  indexes {
    (requestType, parameters) [unique]
  }
}

Table authorizations {
  id String [pk]
  kind Int [not null]
  fromAddress String [not null]
  toAddress String [not null]
  token String [not null]
  amount String [not null]
  nonce String [not null]
  validAfter String [not null]
  validBefore String [not null]
  signature String [not null]
  signer String [not null]
  status AuthorizationStatus [not null, default: 'VERIFIED']
  allowanceAmount String
  settlementHash String
  settledAt DateTime
  submittedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (signer, nonce) [unique]
  }
}

Enum AuthorizationStatus {
  VERIFIED
  AUTHORIZE
  TIMELOCK
  READY
  EXPIRED
  SETTLED
  FAILED
  CANCELLED
}

Ref: user_roles.userId > users.id [delete: Cascade]

Ref: user_roles.roleId > roles.id [delete: Cascade]

Ref: user_roles.grantedBy > users.id [delete: Cascade]

Ref: role_permissions.roleId > roles.id [delete: Cascade]

Ref: role_permissions.permissionId > permissions.id [delete: Cascade]